syntax = "proto3";

option java_package = "pasha.grpc.wallet.practical";

enum Currency{
    USD=0;
    EUR=1;
    GBP=2;
}

message Result{
    int32 code = 1;
    string message = 2;
}

message DepositRequest {
    int64 user_id = 1;
    Currency currency = 2;
    float amount = 3;
}

message DepositResponse {
    Result result = 1;
}

message WithdrawRequest {
    int64 user_id = 1;
    Currency currency = 2;
    float amount = 3;
}

message WithdrawResponse {
    Result result = 1;
}

message BalanceRequest {
    int64 user_id = 1;
}


message Funds{
    Currency currency = 1;
    float amount = 2;
}

message BalanceResponse {
    repeated Funds funds = 1;
}

service WalletService {
    rpc Deposit ( DepositRequest) returns ( stream DepositResponse) {}
    rpc Withdraw ( WithdrawRequest) returns ( stream WithdrawResponse) {}
    rpc Balance( BalanceRequest)  returns ( stream BalanceResponse) {}
}


